--- a/src/css/add-friend.css
+++ b/src/css/add-friend.css
@@ -8,6 +8,10 @@
     padding: 20px;
 }
 
+.add-friend-container.no-scrollbar {
+    min-height: calc(100vh - 40px);
+}
+
 /* Add Friend Card */
 .add-friend-card {
     background-color: #34495e;
